# cyares

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: CI-CD.yaml  build-wheels.yml  codspeed.yml  dependabot-auto-merge.yml  release-wheels.yml  run-cibuildwheel.yml  run-sdist.yml  test.yaml
cyares/: __init__.pxd  __init__.py  aio.py  aiohttp.py  anyio.py  ares.pxd  callbacks.pxd  callbacks.pyx  channel.pxd  channel.pyi  channel.pyx  deprecated_subclass.py  error.pxd  error.pyi  error.pyx  exception.pxd  exception.pyi  exception.pyx  handles.pxd  handles.pxi  handles.pyi  handles.pyx  resulttypes.pxd  resulttypes.pyi  resulttypes.pyx  socket_handle.pxd  socket_handle.pyx  trio.py  typedefs.py
cyares/inc/: __init__.pxd  __init__.py  cares_flag_check.h  cares_headers.h  cyares_err_lookup.h  cyares_lookup.h  cyares_rr.h  cyares_utils.h  utils.h
pycares/: ares.pxd
pycares/handles/: __init__.pxd  callbackhandle.pxd  callbackhandle.pyx  channel.pxi  handle.pxd  handle.pyx  resulttypes.pxd  resulttypes.pyx  sockhandle.pxd  (+1 more)
requirements/: dev.txt  test.txt
tests/: conftest.py  test_addrinfo.py  test_aio_cyares.py  test_anyio.py  test_benchmark.py  test_buffer_leaks.py  test_channel.py  test_channel_dealloc.py  test_channel_init.py  test_channel_timeout.py  test_deprecated_subclass.py  test_future.py  test_future_lowlevel.py  test_idna_error.py  test_manager.py  test_nogil_deadlocks.py  test_search.py  test_seconds_to_ms.py  test_trio.py  test_utils.py
tools/: _tempita_compat.py  generate_results.py
(+2 files in other folders)
