[project]
name = "cyares"
version = "0.1.0"
description = "A Cython Version of c-ares"
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.9"


dependencies = [
    # Self argument
    'typing-extensions; python_version<"3.11"'    
    # Planned but not ready...
    # "yarl>=1.20.1"
]

[build-system]
requires = ["setuptools", "cython"]

[tool.setuptools]
py-modules = []
